--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -7,6 +7,7 @@
         <ul class="subnav" *ngIf="nav.visible">
           <li><a routerLink="document-mom">Meeting Setup</a></li>
           <li><a routerLink="document-mom">Session Topic 1</a></li>
+          <!-- <li *ngIf="Session2"><a routerLink="document-mom">Session Topic 1</a></li> -->
           <li><a routerLink="document-mom">Meeting Summary</a></li>
         </ul>
       </li>
