--- a/src/app/all-documented-mom/all-documented-mom.component.html
+++ b/src/app/all-documented-mom/all-documented-mom.component.html
@@ -22,7 +22,7 @@
                     <td>{{data.meetingStartDate}}</td>
                     <td>{{data.meetingEndDate}}</td>
                     <td>{{data.meetingLocation}}</td>
-                    <td><a href="#" class="btn btn-sm btn-primary">View</a><a href="#" class="btn btn-sm btn-success">Edit</a></td>
+                    <td><a href="/document-mom" class="btn btn-blue-sm">View</a><a href="/document-mom" class="btn btn-success-sm">Edit</a></td>
                   </tr>
                 </tbody>
               </table>
