--- a/src/app/document-mom/document-mom.component.html
+++ b/src/app/document-mom/document-mom.component.html
@@ -60,7 +60,7 @@
                       <div class="d-flex justify-content-center col mt-4">
                         <button class="btn-primary btn mr-2" (click)="nav.select(1)">Cancel</button>
                         <button class="btn-secondary btn" type="button" id="sessionTab" (click)="nav.select(2)">Save and Continue</button>
-                        <button class="btn-primary btn mr-2" (click)="onClick()">Next</button>
+                        <button class="btn-primary btn mr-2" z>Next</button>
                       </div>
                     </div>
                 </ng-template>
