--- a/src/app/autocomplete/autocomplete.component.html
+++ b/src/app/autocomplete/autocomplete.component.html
@@ -1,7 +1,7 @@
 <!-- <p>
   Selected cities: {{selectedCity}}
 </p> -->
-<ng-select [items]="cities2"
+<ng-select [items]="paricipants"
   bindLabel="name"
   bindValue="id"
   [multiple]="true"
