--- a/src/app/dashboard/meeting-data-tbl/meeting-data-tbl.component.html
+++ b/src/app/dashboard/meeting-data-tbl/meeting-data-tbl.component.html
@@ -1,5 +1,5 @@
-<div class="table-responsive">
-<table class="table tbl-form">
+<div class="table-responsive mt-2">
+<table class="table table-bordered">
   <thead>
     <tr>
       <th>Meeting Title</th>
