--- a/src/app/dashboard/meeting-data-tbl/meeting-data-tbl.component.html
+++ b/src/app/dashboard/meeting-data-tbl/meeting-data-tbl.component.html
@@ -19,4 +19,27 @@
     </tr>
     </tbody>
 </table>
+
+</div>
+<div class="row">
+  <div class="col">
+      <span>Showing 1 to 10 of 57 entries</span>
+  </div>
+  <div class="col">
+    <ul class="pagination justify-content-end pagination-sm">
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+        </a>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item"><a class="page-link" href="#">3</a></li>
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+        </a>
+      </li>
+    </ul>
+  </div>
 </div>
