--- a/src/app/dashboard/meeting-data-tbl/meeting-data-tbl.component.html
+++ b/src/app/dashboard/meeting-data-tbl/meeting-data-tbl.component.html
@@ -23,7 +23,7 @@
 </div>
 <div class="row">
   <div class="col">
-      <span>Showing 1 to 10 of 57 entries</span>
+      <span>Showing 5  of 10 entries</span>
   </div>
   <div class="col">
     <ul class="pagination justify-content-end pagination-sm">
@@ -32,7 +32,7 @@
           <span aria-hidden="true">&laquo;</span>
         </a>
       </li>
-      <li class="page-item"><a class="page-link" href="#">1</a></li>
+      <li class="page-item active"><a class="page-link" href="#">1</a></li>
       <li class="page-item"><a class="page-link" href="#">2</a></li>
       <li class="page-item"><a class="page-link" href="#">3</a></li>
       <li class="page-item">
