--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
+
 <ng-sidebar-container>
   <ng-sidebar [opened]="opened">
     <!--- SideBar -->
-    
+
     <app-sidenav></app-sidenav>
   </ng-sidebar>
   <div ng-sidebar-content>
@@ -45,6 +46,9 @@
         </div>
       </div>
   </header>
+  <ngx-ui-loader></ngx-ui-loader>
+    <!-- <ngx-spinner bdColor = "rgba(0, 0, 0, 0.8)" size = "medium" color = "#fff" type = "ball-clip-rotate" [fullScreen] = "true"><p style="color: white" > Loading... </p></ngx-spinner> -->
     <router-outlet></router-outlet>
   </div>
 </ng-sidebar-container>
+
