--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -2,22 +2,24 @@
   <section>
 
     <div class="container">
+      <div class="notification-sec">
 
       <button class="btn btn-success" (click)="showToasterSuccess()">
         Success Toaster
-    </button>
+      </button>
 
-    <button class="btn btn-danger"  (click)="showToasterError()">
-        Error Toaster
-    </button>
+      <button class="btn btn-danger"  (click)="showToasterError()">
+          Error Toaster
+      </button>
 
-    <button class="btn btn-info" (click)="showToasterInfo()">
-        Info Toaster
-    </button>
+      <button class="btn btn-info" (click)="showToasterInfo()">
+          Info Toaster
+      </button>
 
-    <button class="btn btn-warning"  (click)="showToasterWarning()">
-        Warning Toaster
-    </button>
+      <button class="btn btn-warning"  (click)="showToasterWarning()">
+          Warning Toaster
+      </button>
+    </div>
       </div>
     </section>
 </div>
