--- a/src/styles.scss
+++ b/src/styles.scss
@@ -997,27 +997,26 @@ textarea.form-control {
 
 
 
-.custom-datatable .dataTables_wrapper .dataTables_paginate {background:#fff; padding:0rem;margin-bottom: 1rem; border:1px solid #ddd;border-radius:0.3rem}
-.custom-datatable .dataTables_wrapper .dataTables_paginate .paginate_button {min-width: auto;padding: 0.5em;margin-left:0; border-right:1px solid #ddd;}
-.custom-datatable .dataTables_wrapper .dataTables_paginate .paginate_button.current {color: #fff !important;background: #007bff;border-color: #007bff;}
-.custom-datatable .dataTables_wrapper .dataTables_filter input {border-radius:0.3rem;border:1px solid #ddd; padding:0.2rem;}
-.custom-datatable .dataTables_wrapper .dataTables_length select{border-radius:0.3rem;border:1px solid #ddd; padding:0.4rem;}
-.custom-datatable table.dataTable.no-footer {border-bottom:0;margin-bottom: 1rem;}
-.custom-datatable .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
-  color: white !important;
-  border: 1px solid #007bff;
-  background-color: #007bff;
-  background: linear-gradient(to bottom, #007bff 0%, #007bff 100%);
+.custom-datatable {
+  .dataTables_wrapper {
+      .dataTables_paginate {background:#fff; padding:0rem;margin-bottom: 1rem; border:1px solid #ddd;border-radius:0.3rem;
+          .paginate_button {min-width: auto;padding: 0.5em;margin-left:0; border-right:1px solid #ddd;}
+          .paginate_button.current {color: #fff !important;background: #007bff;border-color: #007bff;}
+          .paginate_button:hover {color: white !important;border: 1px solid #007bff;background-color: #007bff;background: linear-gradient(to bottom, #007bff 0%, #007bff 100%);}
+      }
+      .dataTables_filter input {border-radius:0.3rem;border:1px solid #ddd; padding:0.2rem;}
+      .dataTables_length select{border-radius:0.3rem;border:1px solid #ddd; padding:0.4rem;}
+      .dataTables_info {padding-bottom:0.755em;}
+  }
+  table.dataTable thead th,
+  table.dataTable thead td {padding: 10px 18px;border-bottom: 1px solid #ddd;}
+  table.dataTable.no-footer {border-bottom:0;margin-bottom: 1rem;}
 }
-.dataTables_wrapper .dataTables_info {padding-bottom:0.755em;}
-.custom-datatable table.dataTable thead th, .custom-datatable table.dataTable thead td {
-    padding: 10px 18px;
-    border-bottom: 1px solid #ddd;
-}
+
 
 .ngx-overlay .ngx-foreground-spinner {color: #000 !important;}
 .chart-wrapper {margin: 0 auto;width: 380px;height: 300px;}
-
+.notification-sec {height:30vh; vertical-align: middle;display: table-cell;}
 
 @media (max-width: 991.98px) {
   .nav-tabs {
@@ -1055,6 +1054,10 @@ textarea.form-control {
     .nav-pills .show > :after {
       display: none;
     }
+  }
+  .notification-sec {
+    button {width:100%;}
+    .btn + .btn {margin-left: 0rem; margin-top:0.5rem;}
   }
 }
 
